--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "svelte-web-components",
+  "name": "danza-swc",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "author": "Dani Zahonyi",
+  "license": "ISC",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
